Revelation changelog

---------------[ xxxx-xx-xx : 0.4.1 ]---------------

2005-03-18  Erik Grinaker <erikg@codepoet.no>

	* left-align labels in link-buttons (for URLs etc)

	* workaround for gnome-python bug causing crashes on 64-bit
	systems when changing a preference

	* hide any open dialogs when locking the file

	* check generated passwords strength if length >= 8

	* use better lock icon

	* added a password checker dialog

	* use better stock icons for dialog buttons

	* added a more complete word-list

2005-03-17  Erik Grinaker <erikg@codepoet.no>

	* fix potential crash on quit with some pygtk versions

	* improve the user interface for copying username/password
	to clipboard

	* added preference to select doubleclick action; go to, or edit

	* cleaned up the build-system and source file layout

	* improved the preference dialog

	* don't crash when attempting to load missing icons

	* use fallback folder icons when not found in theme

	* update icons on theme change

	* bump version number to 0.4.1

2005-03-16  Erik Grinaker <erikg@codepoet.no>

	* make io.file_monitor() handle NotSupportedError from gnome-vfs

	* fixed crash when file saving fails (invalid permissions etc)

	* display non-ascii characters in filenames correctly

	* use correct encoding (utf-8, not iso-8859-1) in data files

	* workaround for files with incorrect encoding (generated by 0.4.0)

	* properly handle datahandler.DataError

	* made the password strength check more thorough

	* make password warnings handle escape as cancel

2005-02-09  Erik Grinaker <erikg@codepoet.no>

	* make undo actually for for edit actions

	* don't crash when redoing an undone edit action

2005-02-09  Erik Grinaker <erikg@codepoet.no>

	* make a workaround for a gnome-python 2.9.x crasher bug with
	the session client

2005-02-05  Erik Grinaker <erikg@codepoet.no>

	* monitor events on preference, password generator and search
	dialogs

	* check data file password strength
