@@ -12,8 +12,6 @@
 - only copy/paste entries with keyboard shortcut when tree has focus
   (ctrl-c should copy selected label in dataview when focused)
   - use gtk.Window.get_focus()
-- examine drag/drop undo/redo crashes
-- examine crash when closing prefs/pwchecker with escape
 
 0.5.x:
 - ensure complete UTF-8 support
